Minor change to limit max. char number in Comment field

--- a/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
+++ b/src/MSHU.CarWash.UWP/Controls/ReservationDetailsView.xaml
@@ -94,6 +94,7 @@
         <TextBox x:Name="CommentBox"
                  Text="{Binding CurrentReservation.Comment, Mode=TwoWay}"
                  RelativePanel.AlignRightWithPanel="True"
+                 MaxLength="250"
                  MinWidth="160"
                  RelativePanel.RightOf="PlateText" />
         <RelativePanel RelativePanel.Below="CommentBox"
