--- a/src/MSHU.CarWash.Web/app/views/home.html
+++ b/src/MSHU.CarWash.Web/app/views/home.html
@@ -1,9 +1,12 @@
-﻿<div class="jumbotron" ng-init="init()">
-    <h1 class="display-3">Hello, world!</h1>
-    <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
-    <hr class="m-y-2">
-    <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
-    <p class="lead">
-        <a class="btn btn-primary btn-lg" role="button" ng-click="showCalendar(0);">RESERVE</a>
-    </p>
+﻿<div ng-init="init()">
+    <div class="row">
+        <h1 class="display-3">Hello!</h1>
+        <p class="lead">
+            This website is intended to help Microsoft employees working in the Hungarian subsidiary to reserve car washing services from different service providers.
+            <br />To use this website you need a Microsoft Corporate account.
+        </p>
+        <p class="lead">
+            <a class="btn btn-primary btn-lg" role="button" ng-click="showCalendar(0);">RESERVE</a>
+        </p>
+    </div>
 </div>
