--- a/src/MSHU.CarWash.PWA/ClientApp/src/index.css
+++ b/src/MSHU.CarWash.PWA/ClientApp/src/index.css
@@ -4,3 +4,18 @@
         padding-top: 50px;
     }
 }
+
+.primary {
+    background-color: #80d8ff;
+    color: #000000;
+}
+
+.primary-light {
+    background-color: #b5ffff;
+    color: #000000;
+}
+
+.primary-dark {
+    background-color: #49a7cc;
+    color: #000000;
+}
