--- a/src/MSHU.CarWash.PWA/ClientApp/src/index.css
+++ b/src/MSHU.CarWash.PWA/ClientApp/src/index.css
@@ -1,8 +1,5 @@
-@media (max-width: 767px) {
-    /* On small screens, the nav menu spans the full width of the screen. Leave a space for it. */
-    body {
-        padding-top: 50px;
-    }
+body {
+    margin: 0;
 }
 
 .primary {
