--- a/src/MSHU.CarWash.PWA/ClientApp/src/index.css
+++ b/src/MSHU.CarWash.PWA/ClientApp/src/index.css
@@ -5,7 +5,7 @@ body {
 
 a, a:active, a:focus, a:hover, a:visited {
     color: inherit;
-    text-decoration: none;
+    text-decoration: underline;
 }
 
 .primary {
