--- a/src/MSHU.CarWash.PWA.Windows/msapp-error.css
+++ b/src/MSHU.CarWash.PWA.Windows/msapp-error.css
@@ -1,17 +1,11 @@
 ﻿body {
-  margin: 10px;
-} 
-
-.tip {
-  font-size: 90%;
-  padding-left: 20px;
+    padding: 24px;
+    color: #000000;
+    background-color: #fafafa;
+    font-family: "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 
-.paramName {
-  font-size: 100%;
-  color: black;
-} 
-
-.paramValue {
-  color: black;
+a, a:hover, a:focus, a:visited, a:link {
+    text-decoration: underline;
+    color: #000000;
 }
