Custom scrollbar for desktop only

--- a/src/MSHU.CarWash.PWA/ClientApp/src/index.css
+++ b/src/MSHU.CarWash.PWA/ClientApp/src/index.css
@@ -34,18 +34,22 @@ iframe {
   color: #000000;
 }
 
-::-webkit-scrollbar {
-  width: 5px;
-}
-::-webkit-scrollbar-track {
-  background: rgba(0, 0, 0, 0);
-}
-::-webkit-scrollbar-thumb {
-  background: rgba(0, 0, 0, 0.2);
-}
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(0, 0, 0, 0.3);
-}
-::-webkit-scrollbar-thumb:active {
-  background: rgba(0, 0, 0, 0.4);
+@media (min-width: 960px) {
+  ::-webkit-scrollbar {
+    -webkit-appearance: none;
+  }
+
+  ::-webkit-scrollbar:vertical {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar:horizontal {
+    height: 10px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 4px;
+    border-radius: 4px;
+  }
 }
